unified_tests/control_flow/for_condition_incomplete_comparison/expect/build.text.stderr
lib.copp:2:14: error: expected expression
      for 1 <= {
               ^
